fix: change body overflow property from hidden to visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,7 @@ body {
   flex: 1;
   min-height: 0;
   min-width: 0;
-  overflow-x: hidden
+  overflow: visible
 }
 
 .sidebar {
